Added Activities and DialogFlow

--- a/app/src/main/res/layout/camera_connection_fragment_tracking.xml
+++ b/app/src/main/res/layout/camera_connection_fragment_tracking.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-      <com.prince.assestManagement.AutoFitTextureView
+      <com.prince.assetManagement.AutoFitTextureView
           android:id="@+id/texture"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
 
-      <com.prince.assestManagement.OverlayView
+      <com.prince.assetManagement.OverlayView
           android:id="@+id/tracking_overlay"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
