--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -1,11 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Welcome"
-    tools:showIn="@layout/activity_welcome">
+    tools:context=".WelcomeActivity"
+    tools:showIn="@layout/activity_welcome"
+    android:orientation="vertical"
+    android:gravity="center">
 
-</android.support.constraint.ConstraintLayout>
+    <!--<Button-->
+        <!--android:id="@+id/listen"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_marginBottom="59dp"-->
+        <!---->
+        <!--android:text="Start recognition" />-->
+    <Button
+        android:id="@+id/add_asset"
+        android:layout_width="143dp"
+        android:layout_height="48dp"
+        android:text="Add an Asset"
+        android:layout_marginBottom="20dp"
+        tools:layout_editor_absoluteX="119dp"
+        tools:layout_editor_absoluteY="159dp" />
+
+    <Button
+        android:id="@+id/scan_asset"
+        android:layout_width="143dp"
+        android:layout_height="44dp"
+        android:text="Scan an Asset"
+        tools:layout_editor_absoluteX="120dp"
+        tools:layout_editor_absoluteY="240dp" />
+
+    <TextView
+        android:id="@+id/resultTextView"
+        android:layout_width="match_parent"
+        android:layout_height="195dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        tools:layout_editor_absoluteX="74dp"
+        tools:layout_editor_absoluteY="121dp" />
+
+
+
+</LinearLayout>
