--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,12 @@
     tools:context="com.prince.assetManagement.MainActivity"
     android:orientation="vertical">
 
-    <TextView
+    <fragment
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/objectName"/>
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_area"
+        android:name="com.prince.assetManagement.BlankFragment"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Welcome Activity"
-        android:id="@+id/testing"/>
+
 
 </LinearLayout>
