--- a/app/src/main/res/layout/fragment_detected.xml
+++ b/app/src/main/res/layout/fragment_detected.xml
@@ -7,14 +7,16 @@
     android:gravity="center">
 
     <TextView
+        android:id="@+id/objectName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/objectName"/>
+        android:layout_height="88dp"
+        android:textAlignment="center"/>
 
     <Button
-        android:layout_width="match_parent"
+        android:id="@+id/next"
+        android:layout_marginTop="45dp"
+        android:layout_width="142dp"
         android:layout_height="wrap_content"
-        android:text="Welcome Activity"
-        android:id="@+id/testing"/>
+        android:text="Next" />
 
 </LinearLayout>
