--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -36,4 +36,10 @@
         android:onClick="listenButtonOnClick"
         app:srcCompat="@drawable/mic" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
 </android.support.design.widget.CoordinatorLayout>
