--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -22,13 +22,13 @@
         android:orientation="horizontal"
         android:gravity="center">
         <Button
-            android:id="@+id/btnChoose"
+            android:id="@+id/btnChoosge"
             android:text="Choose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/btnUpload"
+            android:id="@+id/btnUplgoad"
             android:text="Upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
