--- a/app/src/main/res/layout/activity_get_pdf.xml
+++ b/app/src/main/res/layout/activity_get_pdf.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GetPDF">
 
+    <TextView
+        android:id="@+id/list"
+        android:layout_width="211dp"
+        android:layout_height="189dp"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="82dp"
+        tools:layout_editor_absoluteY="140dp" />
 </android.support.constraint.ConstraintLayout>
