--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -3,51 +3,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Details"
+    android:layout_marginStart="5dp"
     android:orientation="vertical"
-    android:layout_marginStart="5dp">
+    tools:context=".Details">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="10dp">
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="134dp"
             android:layout_height="33dp"
             android:text="Category" />
+
         <EditText
             android:id="@+id/category"
             android:layout_width="182dp"
             android:layout_height="wrap_content"
-            android:hint="Add Category"/>
+            android:hint="Add Category" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="134dp"
             android:layout_height="33dp"
             android:text="Number of Such Assets" />
+
         <EditText
             android:id="@+id/number_of_assets"
             android:layout_width="182dp"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:hint="Enter Number of Such Assets"/>
+            android:hint="Enter Number of Such Assets"
+            android:inputType="number" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="134dp"
@@ -59,17 +61,19 @@
             android:layout_width="128dp"
             android:layout_height="wrap_content"
             android:hint="Select Date" />
+
         <Button
+            android:id="@+id/select_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select Date"
-            android:id="@+id/select_date"/>
+            android:text="Select Date" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="134dp"
@@ -81,18 +85,19 @@
             android:layout_width="128dp"
             android:layout_height="wrap_content"
             android:hint="Select Date" />
+
         <Button
+            android:id="@+id/warranty_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Select Date"
-            android:id="@+id/warranty_date"/>
+            android:text="Select Date" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="134dp"
@@ -104,18 +109,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Choose Bill" />
+
         <Button
+            android:id="@+id/btnUpload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Upload"
-            android:id="@+id/btnUpload"/>
+            android:text="Upload" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="133dp"
@@ -136,29 +142,34 @@
         android:id="@+id/geotag"
         android:layout_width="191dp"
         android:layout_height="wrap_content"
-        android:text="Click Here To GeoTag"
-        android:layout_marginBottom="5dp"
+        android:layout_gravity="center"
         android:layout_marginTop="15dp"
-        android:layout_gravity="center" />
+        android:layout_marginBottom="5dp"
+        android:text="Click Here To GeoTag" />
 
     <Button
         android:id="@+id/save_info"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:text="Save Information"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:text="Save Information" />
 
     <Button
+        android:id="@+id/next_ac"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:text="Issuing Informatipn"
-        android:id="@+id/next_ac"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:text="Issuing Informatipn" />
 
     <TextView
+        android:id="@+id/num"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/doc"/>
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/doc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
