--- a/app/src/main/res/layout/activity_get_pdf.xml
+++ b/app/src/main/res/layout/activity_get_pdf.xml
@@ -33,5 +33,11 @@
         android:textSize="15sp"
         android:textAlignment="center"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get PDF"
+        android:id="@+id/get_pdf"/>
+
 
 </LinearLayout>
