--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -36,4 +36,13 @@
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="240dp" />
 
+    <TextView
+        android:id="@+id/logout"
+        android:layout_width="105dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="20dp"
+        android:text="Logout"
+        android:textSize="20sp"
+        android:textAlignment="center"/>
+
 </LinearLayout>
