--- a/app/src/main/res/layout/activity_issuing_assets.xml
+++ b/app/src/main/res/layout/activity_issuing_assets.xml
@@ -81,13 +81,32 @@
         <TextView
             android:layout_width="161dp"
             android:layout_height="49dp"
+            android:text="Issued To" />
+
+        <EditText
+            android:id="@+id/issued_to"
+            android:layout_width="182dp"
+            android:layout_height="wrap_content"
+            android:text="" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="161dp"
+            android:layout_height="49dp"
             android:text="Quantity To Be Issued" />
 
         <EditText
             android:id="@+id/issue_quantity"
             android:layout_width="182dp"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:inputType="number"
+            android:text="0"/>
     </LinearLayout>
 
     <LinearLayout
