--- a/app/src/main/res/layout/activity_get_information.xml
+++ b/app/src/main/res/layout/activity_get_information.xml
@@ -115,12 +115,33 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/issued_to_textview"
             android:layout_width="154dp"
             android:layout_height="33dp"
             android:text="Issued To: " />
 
         <TextView
             android:id="@+id/issued_to"
+            android:layout_width="174dp"
+            android:layout_height="wrap_content"
+            android:textAlignment="center" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/issued_date_textview"
+            android:layout_width="154dp"
+            android:layout_height="33dp"
+            android:text="Issued Date: " />
+
+        <TextView
+            android:id="@+id/issued_date"
             android:layout_width="174dp"
             android:layout_height="wrap_content"
             android:textAlignment="center" />
