--- a/app/src/main/res/layout/activity_get_pdf.xml
+++ b/app/src/main/res/layout/activity_get_pdf.xml
@@ -39,5 +39,12 @@
         android:text="Get PDF"
         android:id="@+id/get_pdf"/>
 
+    <TextView
+        android:id="@+id/back_to_home"
+        android:layout_marginTop="35sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back To Home"/>
+
 
 </LinearLayout>
