--- a/app/src/main/res/layout/activity_generate_qr.xml
+++ b/app/src/main/res/layout/activity_generate_qr.xml
@@ -7,10 +7,20 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <ImageView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/image"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="-60dp"
+        android:layout_marginBottom="150dp"
+        android:text="Generate QR Code"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/image"/>-->
 
     <Button
         android:id="@+id/generate_qr"
