--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,31 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group>
         <item android:id="@+id/nav_item_one"
-            android:icon="@drawable/common_google_signin_btn_icon_dark"
-            android:title="Item 1" />
+            android:icon="@drawable/signup"
+            android:title="Sign Up" />
         <item android:id="@+id/nav_item_two"
-            android:icon="@drawable/common_google_signin_btn_icon_dark"
-            android:title="Item 2" />
+            android:icon="@drawable/login"
+            android:title="Login" />
         <item android:id="@+id/nav_item_three"
-            android:icon="@drawable/common_google_signin_btn_icon_dark"
-            android:title="Item 3" />
-    </group>
-
-    <group android:id="@+id/group_menu">
+            android:icon="@drawable/contact"
+            android:title="Contact Us" />
         <item android:id="@+id/nav_item_four"
-            android:title="log in" />
+            android:icon="@drawable/about"
+            android:title="About Us" />
         <item android:id="@+id/nav_item_five"
-            android:title="Item 5" />
-    </group>
+            android:icon="@drawable/shareflat"
+            android:title="Share" />
 
-    <item android:title="Title 1">
-        <menu>
-            <item android:id="@+id/nav_item_six"
-                android:icon="@drawable/common_google_signin_btn_icon_dark"
-                android:title="Item 6" />
-            <item android:id="@+id/nav_item_seven"
-                android:icon="@drawable/common_google_signin_btn_icon_dark"
-                android:title="Item 7" />
-        </menu>
-    </item>
+    </group>
 </menu>
