Added Querying Database For Assets

--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -3,31 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/abs"
     android:layout_height="match_parent"
+    android:background="@drawable/abs"
+    android:gravity="center"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".WelcomeActivity"
-    tools:showIn="@layout/activity_welcome"
-    android:orientation="vertical"
-    android:gravity="center">
+    tools:showIn="@layout/activity_welcome">
 
     <!--<Button-->
-        <!--android:id="@+id/listen"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_marginBottom="59dp"-->
-        <!---->
-        <!--android:text="Start recognition" />-->
+    <!--android:id="@+id/listen"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_alignParentStart="true"-->
+    <!--android:layout_marginBottom="59dp"-->
+    <!---->
+    <!--android:text="Start recognition" />-->
     <Button
         android:id="@+id/add_asset"
         android:layout_width="143dp"
         android:layout_height="48dp"
-        android:text="Add an Asset"
-        android:background="@color/colorAccent"
-        android:textColor="@color/colorw"
         android:layout_marginBottom="20dp"
+        android:background="@color/colorAccent"
+        android:text="Add an Asset"
+        android:textColor="#fff"
         tools:layout_editor_absoluteX="119dp"
         tools:layout_editor_absoluteY="159dp" />
 
@@ -35,11 +35,24 @@
         android:id="@+id/scan_asset"
         android:layout_width="143dp"
         android:layout_height="44dp"
-        android:text="Scan an Asset"
+        android:layout_marginBottom="20dp"
         android:background="@color/colorAccent"
-        android:textColor="@color/colorw"
+        android:text="Scan an Asset"
+        android:textColor="#fff"
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="240dp" />
+
+    <Button
+        android:id="@+id/search_asset"
+        android:layout_width="143dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/colorAccent"
+        android:text="Search Asset"
+        android:textColor="#fff"
+        tools:layout_editor_absoluteX="120dp"
+        tools:layout_editor_absoluteY="240dp" />
+
 
     <TextView
         android:id="@+id/logout"
@@ -47,7 +60,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="20dp"
         android:text="Logout"
-        android:textSize="20sp"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textSize="20sp" />
 
 </LinearLayout>
