--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -53,6 +53,18 @@
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="240dp" />
 
+    <Button
+        android:id="@+id/add_users"
+        android:layout_width="143dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="20dp"
+        android:background="@color/colorAccent"
+        android:text="Add Users"
+        android:textColor="#fff"
+        tools:layout_editor_absoluteX="120dp"
+        tools:layout_editor_absoluteY="240dp" />
+
+
 
     <TextView
         android:id="@+id/logout"
