--- a/app/src/main/res/layout/activity_get_information.xml
+++ b/app/src/main/res/layout/activity_get_information.xml
@@ -151,6 +151,26 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/working_status"
+            android:layout_width="122dp"
+            android:layout_height="33dp"
+            android:text="Working Status" />
+
+        <Switch
+            android:id="@+id/change_status"
+            android:layout_width="122dp"
+            android:layout_height="33dp"
+            android:clickable="false"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
