Fixed Search By User Logic

--- a/app/src/main/res/layout/fragment_asset_type.xml
+++ b/app/src/main/res/layout/fragment_asset_type.xml
@@ -13,14 +13,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="105dp"
                 android:layout_height="match_parent"
                 android:text="Asset Type"
-                android:textAlignment="center"/>
+                android:textAlignment="center" />
 
             <EditText
                 android:id="@+id/asset_type"
