--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -5,10 +5,47 @@
     android:layout_height="match_parent"
     tools:context=".FragmentUser">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="105dp"
+                android:layout_height="match_parent"
+                android:text="Asset User"
+                android:textAlignment="center" />
+
+            <EditText
+                android:id="@+id/asset_user"
+                android:layout_width="177dp"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/get_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Get Info" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/result_title"
+            android:textStyle="bold"
+            android:textSize="19sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"/>
+    </LinearLayout>
 
 </FrameLayout>
