--- a/app/src/main/res/layout/fragment_fragment_date.xml
+++ b/app/src/main/res/layout/fragment_fragment_date.xml
@@ -5,10 +5,50 @@
     android:layout_height="match_parent"
     tools:context=".FragmentDate">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="105dp"
+                android:layout_height="match_parent"
+                android:text="Date"
+                android:textAlignment="center" />
+
+            <EditText
+                android:id="@+id/asset_year"
+                android:layout_width="177dp"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/get_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Get Info" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/result_on"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/result_before"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
+        <TextView
+            android:id="@+id/result_after"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
+    </LinearLayout>
 
 </FrameLayout>
