--- a/app/src/main/res/layout/fragment_vendor.xml
+++ b/app/src/main/res/layout/fragment_vendor.xml
@@ -5,10 +5,41 @@
     android:layout_height="match_parent"
     tools:context=".FragmentVendor">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="30dp">
+
+            <TextView
+                android:layout_width="105dp"
+                android:layout_height="match_parent"
+                android:text="Asset Vendor"
+                android:textAlignment="center"/>
+
+            <EditText
+                android:hint="Seller Name"
+                android:id="@+id/asset_vendor"
+                android:layout_width="177dp"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/get_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Get Info" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </FrameLayout>
